#18 fixed overflow in reach check box

--- a/src/blocks/checkbox-button/checkbox-button.scss
+++ b/src/blocks/checkbox-button/checkbox-button.scss
@@ -35,6 +35,7 @@
     width: fit-content;
     margin-left: 2.1429rem;
     cursor: pointer;
+    white-space: normal;
   }
 
   &__content {
